# worship_viewer

./: .dockerignore  .gitignore  .spectral.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yaml  index.html  proxauth-config.yaml
backend/: .gitignore  Cargo.toml  openapi.json
backend/benches/: repo_perf.rs
backend/db-migrations/: 20240301000007_setlist.surql  20240301000008_song.surql  20240301000009_user.surql  20260328000001_text_search_analyzer.surql  20260328000002_fulltext_search.surql  20260328000003_song_search_content_backfill.surql  20260409120000_song_chordlib07_schema.surql  20260409130000_song_data_plural_arrays_nonempty.surql  20260410140000_song_chordlib08_drop_scalar_metadata.surql  20260413170000_team_invitation.surql  20260418120000_http_request_audit.surql  20260420000000_define_analyzer.surql  20260420000001_define_functions.surql  20260420000002_define_table_blob.surql  20260420000003_define_table_collection.surql  20260420000004_define_table_http_request_audit.surql  20260420000005_define_table_like.surql  20260420000006_define_table_oidc_state.surql  20260420000007_define_table_otp.surql  20260420000008_define_table_session.surql  20260420000010_define_table_song.surql  20260420000011_define_table_team.surql  20260420000012_define_table_team_invitation.surql  20260420000013_define_table_user.surql  20260420000014_user_profile_picture.surql  20260420000015_oidc_state_provider_field.surql  20260420130000_song_schema_align.surql  20260420131500_setlist_schema_align.surql  20260420141500_session_schema_align.surql  20260420143000_otp_schema_align.surql  20260420144500_migration_script_schema_align.surql  20260420153000_http_request_audit_schema_align.surql  20260420154500_collection_schema_align.surql  20260420160000_blob_schema_align.surql  20260427000000_http_request_audit_client_fields.surql  20260504000000_user_audit_metrics_drop_session_audit_idx.surql  20260504100000_define_http_audit_computed_metrics.surql  20260504110000_nonrecursive_array_without_functions.surql
backend/db-migrations/legacy_surrealdb_2.6.5/: 20260320000000_change_db_migration_mechanism.surql  20260413120000_team.surql  20260413130000_team_personal_backfill.surql  20260413140000_resource_teamowner.surql  20260413150000_team_scoped_content.surql  20260413160000_resource_owner_rename_from_teamowner.surql  20260417000000_otp_failed_attempts.surql  20260418080000_blob_svg_xml_mime.surql  20260418130000_surrealql_idiom_v3_compat.surql  20260420120000_user_schema_align_team_model.surql  20260420123000_team_schema_align.surql  20260420124500_team_invitation_schema_align.surql  20260420150000_like_schema_align.surql  20260420151500_oidc_state_schema_align.surql
backend/examples/: print_openapi.rs
backend/src/: about.rs  accept.rs  audit_events_tests.rs  client_attribution.rs  database.rs  docs.rs  error.rs  expand.rs  frontend.rs  governor_audit.rs  governor_peer.rs  http_audit.rs  http_cache.rs  http_tests.rs  lib.rs  mail.rs  main.rs  observability.rs  request_id.rs  request_link.rs  settings.rs  test_helpers.rs
backend/src/auth/: bearer.rs  middleware.rs  mod.rs  rest.rs
backend/src/blob/: mod.rs  model.rs  rest.rs
backend/src/collection/: collection_database.rs  default_collection_link.rs  mod.rs  model.rs  rest.rs
backend/src/database/: migrations.rs  mod.rs
backend/src/export/: format.rs  mod.rs  query_params.rs  rest.rs
backend/src/import/: import.rs  mod.rs  rest.rs
backend/src/like/: like_database.rs  mod.rs  model.rs  rest.rs
backend/src/method/: import.rs  mod.rs  online_search.rs  ws_console.rs
backend/src/player/: mod.rs  rest.rs
backend/src/resources/: common.rs  mod.rs  rest.rs
backend/src/rest/: get.rs  mod.rs  post.rs  query_params.rs
backend/src/server/: error.rs  mod.rs  rest_api.rs  ws_broadcaster.rs
backend/src/setlist/: error.rs  mod.rs  model.rs  rest.rs  setlist.rs  setlist_database.rs  setlist_item.rs  setlist_pool_local.rs  setlist_pool_remote.rs
backend/src/song/: collection_songs.rs  error.rs  filter.rs  link_database.rs  mod.rs  model.rs  query_params.rs  rest.rs  song.rs  songlink_songs.rs
backend/src/tui/: confirmation_box.rs  input_box.rs  list.rs  replace_umlaut.rs  song_display.rs
backend/src/types/: blob.rs  collection.rs  group.rs  mod.rs  player_data.rs  song.rs  user.rs
backend/src/user/: mod.rs  model.rs  rest.rs
backend/surrealdb/schemas/: blob.surql  collection.surql  like.surql  oidc_state.surql  otp.surql  session.surql  setlist.surql  song.surql  user.surql
backend/tests/: 000_teams.yml  0_teams.yml  1_teams.yml  2_users.yml  3_sessions.yml  4_songs.yml  5_collections.yml  6_setlists.yml  7_blobs.yml  8_team_invitations.yml  blobs.rs  blobs.yml  cascades.yml  collections.rs  collections.yml  sessions.yml  setlist.rs  setlists.yml  songs.rs  songs.yml  team_invitations.yml  teams.rs  user_session.rs  users.yml
backend/tests/support/: mod.rs
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs  output.rs  validate.rs
cli/src/handlers/: auth.rs  blobs.rs  collections.rs  mod.rs  schema.rs  sessions.rs  setlists.rs  songs.rs  teams.rs  users.rs
frontend/: Cargo.toml  build-www.js  index.html  manifest.json  package-lock.json  service-worker.js
frontend/fonts/: fonts.css
frontend/public/: index.html  manifest.json
frontend/src/: app.rs  collections.css  collections.rs  main.rs  route.rs  routes.rs  setlist.css  setlist.rs  songs.css  songs.rs  style.css  top_bar.rs  websocket.js
frontend/src/api/: api.rs  error.rs  mod.rs  provider.rs  types.rs
frontend/src/collection/: editor.rs  mod.rs  viewer.rs
frontend/src/components/: BeamerView.svelte  Center.svelte  LeftSidebar.svelte  MusicanView.svelte  aspect_ratio.rs  legal_links.rs  mod.rs  offline_overlay.css  offline_overlay.rs  setlist_editor.css  (+8 more)
shared/: Cargo.toml
shared/src/: lib.rs  move_owner.rs  patch.rs  types.rs  validation_limits.rs
worship_viewer_backend/: Cargo.toml
worship_viewer_backend/src/: database.rs  database_migration.rs  error.rs  main.rs  settings.rs  types.rs
(+413 files in other folders)
