[package]
name = "worship_viewer"
version = "0.1.0"
authors = ["Xilefmusics <xilefmusics@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16"
rocket = "0.4.9"
rocket_contrib = "0.4.9"
rocket_cors = "0.5.1"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0"
ws = "0.9.1"
reqwest = {version = "0.11.3", features=["blocking", "json"]}
html-escape = "0.2.9"
