[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
tokio = { version = "1.48.0", features = ["full"] }
fancy_surreal = { path = "../../fancy_surreal" }
log = "0.4.28"
actix-files = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] }
shared = { path = "../shared", features = ["backend"] }
awc = { version = "3.8.1", features = ["rustls"] }
reqwest = { version = "0.12.24", features = ["multipart", "rustls-tls"] }
zip = "6.0.0"
