[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", default-features = true }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
openidconnect = "3"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.8", features = ["std"] }
envy = "0.4.2"
futures-util = "0.3"
utoipa = { version = "4", features = ["chrono"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
surrealdb = { version = "2.4.0", default-features = false, features = ["kv-mem", "protocol-http", "protocol-ws", "rustls"] }
surrealdb-migrations = "2.3.0"
async-trait = "0.1.89"
lettre = "0.11.19"
ring = "0.17.14"
hex = "0.4.3"
actix-files = "0.6.8"
shared = { path = "../shared", features = ["backend"] }
chordlib = { path = "../../chordlib", features = ["html"] }
zip = "6.0.0"
