[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", default-features = true }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
openidconnect = "3"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.8", features = ["std"] }
envy = "0.4.2"
futures-util = "0.3"
utoipa = { version = "4", features = ["chrono"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
surrealdb = { version = "2.6.5", default-features = false, features = [
    "kv-mem",
    "protocol-http",
    "protocol-ws",
    "rustls",
] }
async-trait = "0.1.89"
lettre = { version = "0.11.21", features = ["tokio1-native-tls"] }
ring = "0.17.14"
hex = "0.4.3"
actix-files = "0.6.10"
actix-governor = "0.10"
shared = { path = "../shared", features = ["backend"] }
chordlib = { version = "0.8.1", features = ["html"] }
zip = "6.0.0"

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "repo_perf"
harness = false
