[package]
name = "worshipviewer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worshipviewer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.23"
dirs = "5.0.1"
shared = { path = "../shared", features = ["cli"] }

