[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
fancy_yew = { path = "../../fancy_yew" }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
wasm-bindgen-futures = "0.4.55"
wasm-bindgen = "0.2.105"
gloo-net = "0.6.0"
gloo-console = "0.3.0"
yew-hooks = "0.3.4"
web-sys = { version = "0.3.82", features = [
    "DragEvent",
    "HtmlInputElement",
    "Location",
    "MouseEvent",
    "Navigator",
    "Performance",
    "PerformanceTiming",
    "Request",
    "RequestCredentials",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "TouchEvent",
    "Window",
] }
gloo = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"
getrandom_0_3 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
js-sys = "0.3.82"
chrono = {version="0.4.42", default-features = false, features = ["clock", "serde"]}
