[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["frontend"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
wasm-bindgen-futures = "0.4.67"
wasm-bindgen = "0.2.117"
gloo-net = "0.6.0"
gloo-console = "0.3.0"
yew-hooks = "0.3.4"
web-sys = { version = "0.3.94", features = [
    "DragEvent",
    "HtmlInputElement",
    "Location",
    "MouseEvent",
    "Navigator",
    "Performance",
    "PerformanceTiming",
    "Request",
    "RequestCredentials",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "TouchEvent",
    "Window",
    "Crypto",
    "HtmlSelectElement",
    "Document",
    "Element",
    "HtmlElement",
] }
gloo = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.8"
getrandom_0_3 = { package = "getrandom", version = "0.3.4", features = [
    "wasm_js",
] }
js-sys = "0.3.94"
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
serde_json = "1.0.149"
