[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chordlib = { path = "../../chordlib", features = ["html"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"], optional = true }
utoipa = { version = "4", optional = true }

[features]
backend = ["utoipa", "uuid"]
