[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chordlib = { version = "0.5.0", features = ["html"] }
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"], optional = true }
utoipa = { version = "4", optional = true }
thiserror = "1.0"
async-trait = "0.1"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
gloo-net = { version = "0.6", features = ["http"], optional = true }
web-sys = { version = "0.3.82", features = ["RequestCredentials"], optional = true }

[features]
backend = ["utoipa", "uuid"]
cli = ["reqwest"]
frontend = ["gloo-net", "web-sys"]
